assets/css/style.css
@import url('https://fonts.googleapis.com/css?family=Merienda&display=swap');

body {
    font-family: 'Merienda', cursive;    
    background-color:#e9ecef94;    
}

/**--- Navbar --**/

.navbar {    
    border: 0;
    padding-right: 10px;
}

.navbar-brand {
    display: inline-block;
    padding: 0;
    margin-right: 0 ;
    font-size: 30px;
    line-height: inherit;
    white-space: nowrap;
    margin-left: 10px;
}

.bg-navbar {
    background-color: white;
}

.nav-link {
    font-size: 20px;
 } 

.nav-header {   
    padding-top: 20px;
    padding-bottom: 20px;
    margin-bottom: 20px;
}

.my-nav .dropdown-menu .swimming {
    color: #bd2130;
}

.my-nav .dropdown-menu .classroom {
    color: #d39e00;
}

.my-nav .dropdown-menu .ballgames {
    color: #007bff;
}

.navbar-nav .dropdown-menu {    
    background-color: f8f9fa;
}

/*---home page --**/

.welcome {
    margin-bottom: 30px;
}

.angel{
    color: blue;
}

.haven {
    color: red;
}

h4 {   
    padding-bottom: 50px;
}

/**--Feedback--**/

.feedback {
    color:blue;
}

#feedback-content {
    font-size: 12px;   
    padding-left: 10px;
    padding-right: 10px; 
}

.feedback-images {
    border-radius: 20px;
    margin-bottom: 10px;
}

/**--Carousel--**/

#carousel {
    padding-left: 10px;
    padding-right: 10px;
}

#carousel-classes {
    margin-bottom: 50px;
}

#carousel-classes1 {
    margin-bottom: 50px;
}

#carousel-classes2 {
    margin-bottom: 50px;
}

/**--Classes--**/

h2 {
    color: #dc3545c4;
}

#class-image {
    padding-right: 10px;
    padding-left: 10px;
}

#classes {
    line-height: 20px;
}

.classroom-header {
    color: #d39e00;
}

.ballgame-header {
    color: #007bff;
}

/**-- Our story --**/

#ourstory {
    background-color: #ffff0047;    
    width: 90%;
    border-radius: 30px;
    padding: 20px;    
}

#overview {
    background-color: lightblue;
    width: 90%;
    border-radius: 30px;
    padding: 20px;
}

#team-member {
    padding-bottom: 20px;
}

hr {
    border-top: 0px;
}

/**--block divider--**/

.block-divider {
    width: 300px;
    height: 5px;
    border: 0;
    background-color: #444;
    margin-bottom: 3rem;
}

.block-divider--blue {
    background-color: #0062cc9e;
}

.block-divider--red {
    background-color: #dc3545c4;
}

.block-divider--yellow {
    background-color: #ffff00d6;
    margin-bottom: 30px;
    margin-top: 30px;
}

/**-- Team --**/

.card {
    border: 0px;    
}

.card-deck, .mx-auto {
    width: 100%;
    text-align: center;
}

.card-body {
    padding: 0px;
    letter-spacing: 4px;
}

.card-deck .card {  
    margin-right: 60px;
    margin-bottom: 50px;
    margin-left: 60px;    
}

.card-img-top {
    max-width: 100%;
    flex-shrink: 0;
    width: 70%;
}

.card-deck .card .card-body p {
    font-size: 15px;
}

.swimming-teacher {
    color:black;
    background-color: #e9ecef94;
}

.classroom-teacher {
   color: black; 
   background-color: #e9ecef94;
}

.ballgame-teacher {
    color: black;
    background-color: #e9ecef94;
}

/**--contact us--**/

form {
    padding: 0px;   
    border-style: double;
    border-color: #e9ecef94;
    background-color: white;
    margin-bottom: 20px;
}

.form-content {
    padding: 0px;
}

.form-group {
    margin-bottom: 20px;        
}

.contact-header {
    padding: 0px;
    color:#dc3545c4;
    letter-spacing: 5px;
    margin-bottom: 20px;
}

#contact-us {
    padding: 0px;
    margin: 0px;
    justify-content: center;
}

.address {
    padding: 0px;
    color: #dc3545c4;
    margin-bottom: 20px;
}

.message-header {
    color: #dc3545c4;    
}

.location {
    padding: 0px;
    color: #007bff;
}

.map {
    height: 300px;
    margin-bottom: 40px;
}

.address-map {
    text-align: left;
    border-color: #e9ecef94;
    border-style: double;
    background-color: white;
    letter-spacing: 2px;
    margin-bottom: 20px;
}

.message-header {
    padding-bottom: 10px;   
}

.btn-danger {
    margin-bottom: 40px;
}

.comment-header {
      margin-bottom: 20px;          
      margin-top: 110px;
}

/**--Footer -**/

footer {
    color: #dc3545;
    background-color: #e9ecef94;
    position: relative;    
    padding-top: 20px;
}

footer i {
    font-size: 30px;
    text-align: center;
}

.footer-about span {
    color: blue;
}

.footer-section {   
    border: 0px;
    text-align: center;
}

.footer-section h5 span {
    color: blue;
}

.footer-section .socials {
    text-align: center;
}

.footer-text {
    color: blue;
    margin-bottom: 20px;
}

.footer-text i {
    color: red;
    font-size: 30px;
}

.contact {
    color: blue;
    margin-bottom: 20px;
}   

.contact i {
    color: red;
}

 .socials {
    color: blue;
    padding-top: 20px;
}

.socials a {
    font-size: 30px;
}

.instagram {
    color: red;
    padding-left: 20px;
}

.fa-facebook {
    padding-right: 20px;
}

/**--Ending motto--**/

.ending-motto {
    margin-bottom: 20px;
    padding-bottom: 20px;
    padding-top: 40px;
}

